--- a/report.tex
+++ b/report.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
-\title{PClub Summer Project Report:Code Assassins}
-\author{Aarsh Prakash Agarwal\\Aditya Jhawar\\Prakhar Ji Gupta\\Shikhar Shivraj Jaiswal}
+\title{Machine Learning Project}
+\author{Bhaskar Singh}
 
 \begin{document}
  
@@ -23,31 +23,11 @@ During the course of the project we learnt a lot of new skills
 		\item Lua
 	\end{enumerate}
 \newpage
-\paragraph{Timeline}
-Throughout the course of this project we completed several tasks assigned to us in the following order:
 
-27th May :Project begins.We are asked to read the first four chapters of neural networks and deep learning and implement the tutorial on the MNIST numbers.
-
-08th June:Lua and torch tutorials are done
-
-13th June:We complete reading the four chapters of neural networks and install the necessary software required to complete the tasks
-
-14th June:First Evaluation
-
-20th June:We finish implementing the MNIST tutorial
-
-21st June:We are asked to choose a task that uses machine learning and complete the project. We choose prediction of foreign exchange rates
-
-25th June:Second Evaluation. This was the final evaluation however as we had started the project a little late so we receive an extension.
-
-09th July:Final Evaluation and our project is completed
-
-
-\newpage
 \paragraph{Resources}
 The internet has been the constant source of information regarding each and every aspect of or project. Some websites used by us along with the help they provides are listed below as
 	\begin{itemize}
-		\item http://rnduja.github.io/ 
+		\item http://dark02bs.github.io/ 
  			\begin{itemize}
 				\item provided us with basic framework of our code
 				\item helped in understanding the neural networks
