--- a/report.tex
+++ b/report.tex
@@ -22,9 +22,7 @@ During the course of the project we learnt a lot of new skills
 		\item Git
 		\item Lua
 	\end{enumerate}
-\newpage
-
-\paragraph{Resources}
+\newpage \paragraph{Resources}
 The internet has been the constant source of information regarding each and every aspect of or project. Some websites used by us along with the help they provides are listed below as
 	\begin{itemize}
 		\item http://dark02bs.github.io/ 
@@ -57,8 +55,7 @@ The internet has been the constant source of information regarding each and ever
 			\begin{itemize}
 				\item to acquire basic knowledge about github
 			\end{itemize}
-		\item https://try.github.io/levels/1/challenges/1
-			\begin{itemize}
+		\item https://try.github.io/levels/1/challenges/1 			\begin{itemize}
 				\item to brush up your github knowledge
 			\end{itemize}
 		\item http://www.histdata.com/
